fix authen/author, add username,email, password reset